fix horizontal scroll on code fragments

--- a/packages/frontend/src/styles.scss
+++ b/packages/frontend/src/styles.scss
@@ -370,3 +370,7 @@ mat-paginator,
 .mat-mdc-dialog-content {
   max-height: unset !important;
 }
+
+pre {
+  overflow-x: scroll
+}
